file(GLOB_RECURSE files_cpp *.cc)

function(add_usipp_executable NAME)
    add_executable(${NAME} ${NAME}.cc)
    target_link_libraries(${NAME} usipp)
endfunction()

add_usipp_executable(arps arps.cc)
add_usipp_executable(arpw arpw.cc)
add_usipp_executable(dns-tkey dns-tkey.cc)
add_usipp_executable(icmp6_sniff icmp6_sniff.cc)
add_usipp_executable(icmp_sniff icmp_sniff.cc)
add_usipp_executable(ipcomp ipcomp.cc)
add_usipp_executable(martian_dest_test2 martian_dest_test2.cc)
add_usipp_executable(martian_dest_test6 martian_dest_test6.cc)
add_usipp_executable(martian_dest_test martian_dest_test.cc)
add_usipp_executable(synping synping.cc)
add_usipp_executable(trace trace.cc)
add_usipp_executable(udp6_spoof udp6_spoof.cc)
add_usipp_executable(udp_spoof udp_spoof.cc)
add_usipp_executable(wifi wifi.cc)
